--- a/GlucoMan.Maui/RecipePage.xaml
+++ b/GlucoMan.Maui/RecipePage.xaml
@@ -88,14 +88,14 @@
                     <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
                     Grid.ColumnSpan="5" Text="Ingredients data" FontAttributes="Bold" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-                    
+
                     <Label Grid.Row="1" Grid.Column="0"
                            Text="Name"
                            ToolTipProperties.Text="Name of the ingredient" Grid.ColumnSpan="2" 
                         HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
                     <Label Grid.Row="1" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" 
                         HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-                    
+
                     <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="txtIngredientName" 
                         BackgroundColor="LightGreen" TextColor="Black"
                         ToolTipProperties.Text="Name: short name of the ingredient"
@@ -202,7 +202,7 @@
                                 ImageSource="balance.png"
                                 ToolTipProperties.Text="Weigh: opens the page that helps in weighing the ingredient"
                                 LineBreakMode="WordWrap" Clicked="btnWeighFood_Click" 
-                                IsEnabled="False"/>
+                                IsEnabled="True"/>
                         <!--Text="Weigh"-->
                         <Button Grid.Column="3"  x:Name="btnRecipes" 
                                 ImageSource="recipe.png"
@@ -211,39 +211,57 @@
                                 IsEnabled="True"></Button>
                         <!--Text="Recipes"-->
                     </Grid>
-                    <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5" Margin="5"
-                        Grid.RowDefinitions="20,*" ColumnDefinitions="*,65,65,65" VerticalOptions="Start">
-                        <Label Grid.Row="0" Grid.Column="0" Text="Ingredient" Margin="2,0,0,0"
-                       HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
-                        <Label Grid.Row="0" Grid.Column="1" Text="Quant [g]" 
-                       HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-                        <Label Grid.Row="0" Grid.Column="2" Text="Quant%" 
-                       HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-                        <Label Grid.Row="0" Grid.Column="3" Text="CHO%" 
-                       HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-                    </Grid>
+                    <ListView Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5" 
+                          x:Name="gridIngredients" ItemsSource="{Binding}"
+                VerticalOptions="Center" Margin="3"
+                ItemSelected="gridIngredients_ItemSelected" >
+                        <ListView.Header>
+                            <Grid ColumnDefinitions="*,65,65,65"
+                BackgroundColor="#e8f5e9"
+                Margin="2"
+                Padding="0,3,0,3">
+                                <Label Grid.Column="0" Text="Ingredient" 
+                        HorizontalTextAlignment="Start"
+                        FontAttributes="Bold"
+                        FontSize="14"
+                        TextColor="#2c3e50"
+                        Margin="5,0"/>
+                                <Label Grid.Column="1" Text="Quant [g]" 
+                        HorizontalTextAlignment="Center"
+                        FontAttributes="Bold"
+                        FontSize="14"
+                        TextColor="#2c3e50"/>
+                                <Label Grid.Column="2" Text="Quant%" 
+                        HorizontalTextAlignment="Center"
+                        FontAttributes="Bold"
+                        FontSize="14"
+                        TextColor="#2c3e50"/>
+                                <Label Grid.Column="3" Text="CHO%" 
+                        HorizontalTextAlignment="Center"
+                        FontAttributes="Bold"
+                        FontSize="14"
+                        TextColor="#2c3e50"/>
+                            </Grid>
+                        </ListView.Header>
+                        <!-- description of data to be shown, in a DataTemplate -->
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <ViewCell.View>
+                                        <Grid Margin="0" Grid.RowDefinitions="*" ColumnDefinitions="*,65,65,65" >
+                                            <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}"/>
+                                            <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding QuantityGrams.Text}"/>
+                                            <Label HorizontalTextAlignment="Center" Grid.Column="2" Text="{Binding QuantityPerUnit.Text}"/>
+                                            <Label HorizontalTextAlignment="Center" Grid.Column="3" Text="{Binding CarbohydratesPerUnit.Text}"/>
+                                        </Grid>
+                                    </ViewCell.View>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
                 </Grid>
             </Grid>
-            <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" 
-                          x:Name="gridIngredients" ItemsSource="{Binding}"
-                          VerticalOptions="Center" Margin="3"
-                          ItemSelected="gridIngredients_ItemSelected" >
-                <!-- description of data to be shown, in a DataTemplate -->
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.View>
-                                <Grid Margin="0" Grid.RowDefinitions="*" ColumnDefinitions="*,65,65,65" >
-                                    <Label HorizontalTextAlignment="Start" Grid.Column="0" Text="{Binding Name}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="1" Text="{Binding QuantityGrams.Text}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="2" Text="{Binding QuantityPerUnit.Text}"/>
-                                    <Label HorizontalTextAlignment="Center" Grid.Column="3" Text="{Binding CarbohydratesPerUnit.Text}"/>
-                                </Grid>
-                            </ViewCell.View>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
