--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -82,15 +82,29 @@
                 </Label>
             </HorizontalStackLayout>
 
-            <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Text="Gluc.[mg/dL]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-
             <ListView Grid.Row="6" Grid.ColumnSpan="4"
                       x:Name="gridMeasurements" ItemsSource="{Binding}"
                       ToolTipProperties.Text="List of past glucose measurements"
                       ItemSelected="OnGridSelection" 
                       RowHeight="22">
+                <!-- Header with column labels -->
+                <ListView.Header>
+                    <Grid ColumnDefinitions="*,*"
+                          BackgroundColor="#e8f5e9"
+                          Margin="2"
+                          Padding="0,3,0,3">
+                        <Label Grid.Column="0" Text="Time" 
+                               HorizontalTextAlignment="Center"
+                               FontAttributes="Bold"
+                               FontSize="14"
+                               TextColor="#2c3e50"/>
+                        <Label Grid.Column="1" Text="Gluc.[mg/dL]" 
+                               HorizontalTextAlignment="Center"
+                               FontAttributes="Bold"
+                               FontSize="14"
+                               TextColor="#2c3e50"/>
+                    </Grid>
+                </ListView.Header>
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
                     <DataTemplate>
